--- a/Bernd_Dual_AGN.ipynb
+++ b/Bernd_Dual_AGN.ipynb
@@ -15,7 +15,10 @@
    "source": [
     "Bernd Husemann, using a new VLT/MUSE observation, has discovered that [LBQS 0302-0019](http://ned.ipac.caltech.edu/ui/?q=objsearch&corr_z=1&list_limit=5&extend=no&out_csys=Equatorial&hconst=73&objname=LBQS%200302-0019&out_equinox=J2000.0&img_stamp=YES&omegav=0.73&obj_sort=RA%20or%20Longitude&omegam=0.27&of=pre_text), a famous quasar at $z=3.3$, is actually a dual AGN. \n",
     "\n",
-    "Bernd has discovered that this is a dual AGN at a common redshift of $z=3.3$, with an angular (physical) separation of $2.9''$ ($20$ kpc). We want to simulate a *Chandra* and *Lynx* observation of this system. These are MUSE Ly$\\alpha$ and HeII line images from his paper: \n",
+    "Both AGN are at a common redshift of $z=3.3$, with an angular (physical) separation of $2.9''$ ($\\sim20$ kpc). We want to simulate a *Chandra* and *Lynx* observation of this system. Let's gather what we'll need to accomplish that. \n",
+    "\n",
+    "\n",
+    "These are MUSE Ly$\\alpha$ and HeII line images from his paper: \n",
     "\n",
     "\n",
     "![We want to make this](images/whatwewant.png)\n",
