--- a/Bernd_Dual_AGN.ipynb
+++ b/Bernd_Dual_AGN.ipynb
@@ -41,7 +41,7 @@
     "![Damn2](images/xmm_sc.png)\n",
     "\n",
     "\n",
-    "Looks like the EPIC 0.2-12 keV flux is 1.04328e-13 erg/cm2/s. For the time being, let's go with that. \n"
+    "Looks like the EPIC 0.2-12 keV flux (`sc_ep_8_flux` in the XMM SC) is $1.04328 \\times 10^{-13}$ erg/cm2/s. For the time being, let's go with that. \n"
    ]
   },
   {
